--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -158,3 +158,15 @@ input[type="password"]::-moz-svg-anonymous {
 input[type="password"]::-ms-reveal {
   display: none;
 }
+
+.scroll-hidden::-webkit-scrollbar {
+  display: none;
+}
+
+.event-grid .share-button {
+  opacity: 0;
+}
+
+.event-grid:hover .share-button {
+  opacity: 1;
+}
