--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -193,3 +193,10 @@ input[type="password"]::-ms-reveal {
 .hover-text-button:hover span:nth-child(2) {
   transform: translateY(0px);
 }
+
+.our-apps-menu {
+  box-shadow: 0px 106.29px 503.27px 0px rgba(0, 0, 0, 0.08);
+}
+.profile-menu:hover .profile-chevron {
+  transform: translateY(2px);
+}
